--- a/styles/cv-style.css
+++ b/styles/cv-style.css
@@ -6,6 +6,11 @@
     margin: 0px;
     border: 0px;
 }
+@media only screen and (max-width: 400px) {
+    * {
+      font-size: 35px;
+    }
+  }
 body {
     display: flex;
     flex-flow: row wrap;
