--- a/styles/cv-style.css
+++ b/styles/cv-style.css
@@ -6,13 +6,14 @@
     margin: 0px;
     border: 0px;
 }
-@media only screen and (max-width: 400px) {
-    * {
-      font-size: 35px;
+@media only screen and (max-width: 600px) {
+    .box {
+        width: 100vw;
     }
-  }
+}
 body {
     display: flex;
+    min-height: 100vh;
     flex-flow: row wrap;
     justify-content: center;
 }
@@ -30,7 +31,8 @@ figcaption {
     font-style: italic;
 }
 .box {
-    flex: 1 1 16rem;
+    flex: 1 1 20vw;
+    min-width: 150px;
     background-color: lightgrey;
     border: 1px solid black;
     padding: 10px;
